--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body {
 *****************/
 
 h1 {
-	font-size: 28px;
+	font-size: 2em;
 	font-family: "Ubuntu", sans-serif;
 	color: #f6f6f6;
 }
@@ -33,7 +33,7 @@ h1 {
 }
 
 .info {
-	font-size: 12px;
+	font-size: 1em;
 }
 
 .hi-lo p {
